[project]
name = "ComfyUI-Depth-Visualization-advanced"
description = "Works with any Depth Map and visualizes the applied version it inside ComfyUI"
version = "1.0.1"
license = "LICENSE"
dependencies = ["Pillow>=10.1.0"]

[project.urls]
Repository = "https://github.com/coiichan/ComfyUI-Depth-Visualization-advanced"

[tool.comfy]
PublisherId = "coiichan"
DisplayName = "ComfyUI-Depth-Visualization-advanced"
Icon = ""
